# apollo

./: .coveragerc  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml  release.yml
src/apollo/: __main__.py  app.py
src/apollo/entities/: alerts.py
src/apollo/gateways/: telegram.py
src/apollo/handlers/: alerts.py
