[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "apollo"
version = "1.0.1"
description = "General purpose telegram bot"
authors = ["Kirill Sumorokov <sumorokov.k@gmail.com>"]
packages = [
    { include = "apollo", from = "src" },
]

[tool.poetry.dependencies]
aiohttp-metrics = {git = "https://github.com/clayman083/aiohttp-metrics.git", rev = "v0.1.3"}
aiohttp-micro = {git = "https://github.com/clayman083/aiohttp-micro.git", rev = "v0.3.3"}
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
coverage = "*"
faker = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins-unleashed = "*"
flake8-comprehensions = "*"
flake8-import-order = "*"
flake8-print = "*"
flake8-pytest = "*"
ipython = "*"
mypy = "*"
pytest = "*"
pytest-aiohttp = "*"
rope = "*"
